# mbed-client-for-aws

./: .gitignore  .mbedignore  CMakeLists.txt  Device-Shadow-for-AWS-IoT-embedded-sdk.lib  README.md  aws-iot-device-sdk-embedded-c.lib  cbor.h  coreJSON.lib  coreMQTT.lib  iot_clock.cpp  iot_mutex.cpp  iot_network.cpp  iot_platform_types_mbed_os.h  iot_semaphore.cpp  iot_thread.cpp  mbed_lib.json  tinycbor.lib
config/: logging_config.h
include/AWSClient/: AWSClient.h  mqtt_subscription_manager.h
mbed/include/: iot_config.h  iot_platform_types_mbed_os.h
mbed/src/: iot_clock.cpp  iot_mutex.cpp  iot_network.cpp  iot_semaphore.cpp  iot_thread.cpp
source/: AWSClient.cpp  mqtt_subscription_manager.c
source/config/: defender_config.h  logging_config.h  shadow_config.h
